feat: Implement routing and navigation
Integrates React Router DOM to enable declarative navigation and manage application views. This change introduces route definitions, URL-based view state, and a navigation adapter to bridge existing navigation logic with the new routing system. Mock data is updated to reflect changes in SKU and supplier codes.

--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "bpm-os-v3.5",
   "private": true,
@@ -11,6 +12,7 @@
   "dependencies": {
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-router-dom": "^6.20.0",
     "lucide-react": "^0.562.0"
   },
   "devDependencies": {
